--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     <div class="container">
+        <!-- Botones de control -->
+        <div class="control-buttons">
+            <div class="control-btn">+</div>
+            <div class="control-btn">≡</div>
+        </div>
+
         <!-- Menú lateral -->
         <div class="sidebar">
             <div class="logo">
@@ -33,18 +39,6 @@
             <input type="text" class="search-bar" placeholder="Buscar productos...">
             <footer>© 2025 MiniMarket | Creado y desarrollado por Jonathan Tuquerez</footer>
         </div>
-
-        <!-- Loader (opcional, se muestra durante la carga) -->
-        <div class="loader" id="loader">
-            <img src="loader.png.jpg" alt="Loader">
-        </div>
     </div>
-
-    <script>
-        // Ejemplo básico para ocultar el loader después de cargar
-        window.onload = function() {
-            document.getElementById('loader').style.display = 'none';
-        };
-    </script>
 </body>
 </html>
