--- a/index.html
+++ b/index.html
@@ -1,41 +1,51 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MiniMarket</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MiniMarket</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Íconos superior -->
-  <div class="icono plus">+</div>
-  <div class="icono menu">≡</div>
+    <div class="container">
+        <!-- Botones de control -->
+        <div class="control-buttons">
+            <div class="control-btn">+</div>
+            <div class="control-btn">≡</div>
+        </div>
 
-  <!-- Menú desplegable -->
-  <div class="menu-desplegable">
-    <ul>
-      <li>📦 Inventario</li>
-      <li>🛒 Ventas</li>
-      <li>⏱️ Historial</li>
-      <li>📊 Estadísticas</li>
-      <li>⚙️ Configuración</li>
-    </ul>
-  </div>
+        <!-- Logo -->
+        <div class="logo">
+            <img src="logo.png.jpg" alt="MiniMarket Logo">
+        </div>
 
-  <!-- Encabezados -->
-  <h1>Bienvenido a MiniMarket</h1>
-  <h2>Tu sistema de gestión rápido y sencillo</h2>
+        <!-- Contenido principal -->
+        <div class="main-content">
+            <h1>Bienvenido a <span>MiniMarket</span></h1>
+            <p>Tu sistema de gestión rápido y sencillo</p>
+            <div class="buttons">
+                <button class="btn explore">EXPLORAR PRODUCTOS</button>
+                <button class="btn scanner">ESCANER</button>
+            </div>
+            <input type="text" class="search-bar" placeholder="Buscar productos...">
+        </div>
+    </div>
 
-  <!-- Botones principales -->
-  <div class="botones">
-    <button class="boton explorar">🛒 Explorar Productos</button>
-    <button class="boton escanear">📷 Escáner</button>
-  </div>
-
-  <!-- Campo de búsqueda -->
-  <input class="search" type="text" placeholder="Buscar productos...">
-
-  <!-- Pie de página -->
-  <footer>© 2025 MiniMarket | Creado y desarrollado por Jonathan Tuquerrez</footer>
+    <script>
+        // JavaScript para activar la cámara al hacer clic en "ESCANER"
+        document.querySelector('.btn.scanner').addEventListener('click', function() {
+            navigator.mediaDevices.getUserMedia({ video: { facingMode: 'environment' } })
+                .then(function(stream) {
+                    const video = document.createElement('video');
+                    video.srcObject = stream;
+                    video.play();
+                    document.body.appendChild(video);
+                    alert('Cámara activada. Escanea un producto y verifica el repositorio.');
+                })
+                .catch(function(err) {
+                    alert('Error al acceder a la cámara: ' + err.message + '. Asegúrate de permitir el acceso.');
+                });
+        });
+    </script>
 </body>
 </html>
