--- a/index.html
+++ b/index.html
@@ -4,128 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MiniMarket</title>
-    <style>
-        body {
-            background-color: #000;
-            color: #fff;
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            position: relative;
-        }
-        .container {
-            text-align: center;
-        }
-        h1 {
-            color: #00ff00;
-            font-size: 3em;
-            margin-bottom: 10px;
-        }
-        p {
-            color: #ccc;
-            margin-bottom: 20px;
-        }
-        .buttons {
-            display: flex;
-            gap: 20px;
-            justify-content: center;
-        }
-        .btn {
-            padding: 15px 30px;
-            font-size: 1.2em;
-            border: none;
-            border-radius: 10px;
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
-        .btn-explore {
-            background-color: #222;
-            color: #00ff00;
-            border: 2px solid #00ff00;
-        }
-        .btn-scan {
-            background-color: #222;
-            color: #ff00ff;
-            border: 2px solid #ff00ff;
-        }
-        .search-bar {
-            margin-top: 20px;
-            padding: 10px;
-            width: 300px;
-            border: 2px solid #00ff00;
-            border-radius: 5px;
-            background-color: #222;
-            color: #ccc;
-        }
-        footer {
-            position: fixed;
-            bottom: 10px;
-            color: #888;
-            font-size: 0.8em;
-        }
-        .logo {
-            margin-bottom: 20px;
-            border: 2px solid #ff00ff;
-            padding: 10px;
-            display: inline-block;
-            border-radius: 5px;
-        }
-        .dropdown {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            display: inline-block;
-        }
-        .dropbtn {
-            background-color: inherit;
-            color: inherit;
-            padding: 10px;
-            border: none;
-            cursor: pointer;
-            border-radius: inherit;
-        }
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            min-width: 160px;
-            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-            z-index: 1;
-            top: 100%;
-            right: 0;
-            margin-top: 5px;
-        }
-        .dropdown-content a {
-            color: inherit;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-        }
-        .dropdown-content a:hover {
-            background-color: #444;
-        }
-        .show {
-            display: block;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="dropdown">
-        <button class="dropbtn" onclick="toggleMenu()">☰</button>
-        <div id="myDropdown" class="dropdown-content">
-            <a href="#">Inventario</a>
-            <a href="#">Ventas</a>
-            <a href="#">Historial</a>
-            <a href="#">Estadísticas</a>
-            <a href="#">Configuración</a>
+    <!-- Botones de control (incluye el logo en la esquina superior izquierda) -->
+    <div class="control-buttons">
+        <div class="logo top-logo">
+            <img src="https://via.placeholder.com/50" alt="MiniMarket Logo" style="vertical-align: middle;">
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn" onclick="toggleMenu()">☰</button>
+            <div id="myDropdown" class="dropdown-content">
+                <a href="#">Inventario</a>
+                <a href="#">Ventas</a>
+                <a href="#">Historial</a>
+                <a href="#">Estadísticas</a>
+                <a href="#">Configuración</a>
+            </div>
         </div>
     </div>
+
+    <!-- Contenido principal -->
     <div class="container">
-        <div class="logo">
+        <!-- Logo en el centro -->
+        <div class="logo center-logo">
             <img src="https://via.placeholder.com/50" alt="MiniMarket Logo" style="vertical-align: middle;">
         </div>
         <h1>BIENVENIDO A MINIMARKET</h1>
@@ -143,7 +45,6 @@
             document.getElementById("myDropdown").classList.toggle("show");
         }
 
-        // Cierra el menú si se hace clic fuera de él
         window.onclick = function(event) {
             if (!event.target.matches('.dropbtn')) {
                 var dropdowns = document.getElementsByClassName("dropdown-content");
