--- a/index.html
+++ b/index.html
@@ -1,185 +1,60 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>MiniMarket</title>
-  <style>
-    body {
-      background-color: #000;
-      color: #fff;
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      position: relative;
-    }
-
-    .container {
-      text-align: center;
-    }
-
-    h1 {
-      color: #00ff00;
-      font-size: 3em;
-      margin-bottom: 10px;
-    }
-
-    p {
-      color: #ccc;
-      margin-bottom: 20px;
-    }
-
-    .buttons {
-      display: flex;
-      gap: 20px;
-      justify-content: center;
-    }
-
-    .btn {
-      padding: 15px 30px;
-      font-size: 1.2em;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
-
-    .btn-explore {
-      background-color: #222;
-      color: #00ff00;
-      border: 2px solid #00ff00;
-    }
-
-    .btn-scan {
-      background-color: #222;
-      color: #ff00ff;
-      border: 2px solid #ff00ff;
-    }
-
-    .search-bar {
-      margin-top: 20px;
-      padding: 10px;
-      width: 300px;
-      border: 2px solid #00ff00;
-      border-radius: 5px;
-      background-color: #222;
-      color: #ccc;
-    }
-
-    footer {
-      position: fixed;
-      bottom: 10px;
-      color: #888;
-      font-size: 0.8em;
-    }
-
-    .logo-center {
-      margin-bottom: 20px;
-      display: inline-block;
-    }
-
-    .logo-fixed {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      width: 50px;
-    }
-
-    .dropdown {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      display: inline-block;
-    }
-
-    .dropbtn {
-      background-color: inherit;
-      color: inherit;
-      padding: 10px;
-      border: none;
-      cursor: pointer;
-    }
-
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      min-width: 160px;
-      background-color: #111;
-      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-      z-index: 1;
-      top: 100%;
-      right: 0;
-      margin-top: 5px;
-    }
-
-    .dropdown-content a {
-      color: inherit;
-      padding: 12px 16px;
-      text-decoration: none;
-      display: block;
-    }
-
-    .dropdown-content a:hover {
-      background-color: #444;
-    }
-
-    .show {
-      display: block;
-    }
-  </style>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Proyecto Responsive</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <!-- Logo fijo en la esquina superior izquierda -->
-  <img src="https://raw.githubusercontent.com/jona30-web/Minimarket.app/main/logosinfondo.png.png" alt="Logo" class="logo-fixed" />
 
-  <!-- Menú en la esquina superior derecha -->
-  <div class="dropdown">
-    <button class="dropbtn" onclick="toggleMenu()">☰</button>
-    <div id="myDropdown" class="dropdown-content">
-      <a href="#">Inventario</a>
-      <a href="#">Ventas</a>
-      <a href="#">Historial</a>
-      <a href="#">Estadísticas</a>
-      <a href="#">Configuración</a>
+    <div class="dropdown">
+        <button class="dropbtn" onclick="toggleDropdown()">☰</button>
+        <div id="dropdown-menu" class="dropdown-content">
+            <a href="#">Opción 1</a>
+            <a href="#">Opción 2</a>
+            <a href="#">Opción 3</a>
+        </div>
     </div>
-  </div>
 
-  <!-- Contenido central -->
-  <div class="container">
-    <div class="logo-center">
-      <img src="https://raw.githubusercontent.com/jona30-web/Minimarket.app/main/logosinfondo.png.png" alt="MiniMarket Logo" style="width: 100px; height: auto;" />
+    <div class="container">
+        <div class="logo">
+            <img src="https://raw.githubusercontent.com/jona30-web/Minimarket.app/refs/heads/main/logosinfondo.png.png" alt="Logo" />
+        </div>
+
+        <h1>Título Principal</h1>
+        <p>Este es un texto descriptivo para que el diseño se vea bien en cualquier pantalla.</p>
+
+        <div class="buttons">
+            <button class="btn btn-explore">Explorar</button>
+            <button class="btn btn-scan">Escanear</button>
+        </div>
+
+        <input type="search" class="search-bar" placeholder="Buscar..." />
     </div>
-    <h1>BIENVENIDO A MINIMARKET</h1>
-    <p>Tu sistema de gestión rápido y sencillo</p>
-    <div class="buttons">
-      <button class="btn btn-explore">📦 Explorar Productos</button>
-      <button class="btn btn-scan">📷 Escáner</button>
-    </div>
-    <input type="text" class="search-bar" placeholder="Buscar productos..." />
-    <footer>© 2025 MiniMarket | Creado y desarrollado por Jonathan Tuquerrez</footer>
-  </div>
 
-  <script>
-    function toggleMenu() {
-      document.getElementById("myDropdown").classList.toggle("show");
-    }
+    <footer>
+        &copy; 2025 Mi Proyecto
+    </footer>
 
-    window.onclick = function (event) {
-      if (!event.target.matches(".dropbtn")) {
-        var dropdowns = document.getElementsByClassName("dropdown-content");
-        for (var i = 0; i < dropdowns.length; i++) {
-          var openDropdown = dropdowns[i];
-          if (openDropdown.classList.contains("show")) {
-            openDropdown.classList.remove("show");
-          }
+    <script>
+        function toggleDropdown() {
+            document.getElementById("dropdown-menu").classList.toggle("show");
         }
-      }
-    };
-  </script>
+
+        // Cierra el menú si el usuario hace clic fuera de él
+        window.onclick = function(event) {
+            if (!event.target.matches('.dropbtn')) {
+                var dropdowns = document.getElementsByClassName("dropdown-content");
+                for (var i = 0; i < dropdowns.length; i++) {
+                    var openDropdown = dropdowns[i];
+                    if (openDropdown.classList.contains('show')) {
+                        openDropdown.classList.remove('show');
+                    }
+                }
+            }
+        }
+    </script>
+
 </body>
 </html>
