--- a/index.html
+++ b/index.html
@@ -1,59 +1,159 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Proyecto Responsive</title>
-    <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MiniMarket UI</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <style>
+        /* Custom styles for neon effects and specific looks if Tailwind isn't enough */
+        body {
+            font-family: 'Arial', sans-serif; /* Matching the font from previous CSS */
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+        }
+        .neon-text-green {
+            text-shadow: 0 0 5px #00ff00, 0 0 10px #00ff00, 0 0 15px #00ff00, 0 0 20px #00ff00;
+        }
+        .neon-border-green {
+            box-shadow: 0 0 3px #00ff00, 0 0 5px #00ff00, 0 0 7px #00ff00;
+        }
+        .neon-border-magenta {
+            box-shadow: 0 0 3px #ff00ff, 0 0 5px #ff00ff, 0 0 7px #ff00ff;
+        }
+        .btn-explore {
+            background-color: rgba(0, 255, 0, 0.1); /* Slight green background */
+        }
+        .btn-scan {
+             background-color: rgba(255, 0, 255, 0.1); /* Slight magenta background */
+        }
+
+        /* Custom scrollbar for a more modern look - optional */
+        ::-webkit-scrollbar {
+            width: 8px;
+        }
+        ::-webkit-scrollbar-track {
+            background: #1a1a1a;
+        }
+        ::-webkit-scrollbar-thumb {
+            background: #00ff00;
+            border-radius: 4px;
+        }
+        ::-webkit-scrollbar-thumb:hover {
+            background: #00cc00;
+        }
+        .dropdown-item-hover:hover {
+            background-color: rgba(255, 255, 255, 0.1);
+        }
+    </style>
 </head>
-<body>
+<body class="bg-black text-white min-h-screen flex flex-col items-center pt-4 sm:pt-8 px-4">
 
-    <div class="dropdown">
-        <button class="dropbtn" onclick="toggleDropdown()">☰</button>
-        <div id="dropdown-menu" class="dropdown-content">
-            <a href="#">Opción 1</a>
-            <a href="#">Opción 2</a>
-            <a href="#">Opción 3</a>
-        </div>
-    </div>
+    <header class="w-full max-w-4xl flex justify-between items-center mb-8 sm:mb-12">
+        <button class="p-2 sm:p-3 border-2 border-fuchsia-500 neon-border-magenta rounded-lg text-fuchsia-500 hover:bg-fuchsia-700 hover:text-white transition-all">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="w-5 h-5 sm:w-6 sm:h-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
+            </svg>
+        </button>
 
-    <div class="container">
-        <div class="logo">
-            <img src="https://raw.githubusercontent.com/jona30-web/Minimarket.app/refs/heads/main/logosinfondo.png.png" alt="Logo" />
+        <div class="text-center">
+            <img src="https://placehold.co/100x40/000000/ff00ff?text=LOGO&font=arial" alt="MiniMarket Logo" class="h-8 sm:h-10 opacity-70" onerror="this.src='https://placehold.co/100x40/000000/808080?text=Logo+Error'"/>
         </div>
 
-        <h1>Título Principal</h1>
-        <p>Este es un texto descriptivo para que el diseño se vea bien en cualquier pantalla.</p>
+        <div class="relative">
+            <button id="menuButton" class="p-2 sm:p-3 border-2 border-fuchsia-500 neon-border-magenta rounded-lg text-fuchsia-500 hover:bg-fuchsia-700 hover:text-white transition-all">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="w-5 h-5 sm:w-6 sm:h-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+                </svg>
+            </button>
 
-        <div class="buttons">
-            <button class="btn btn-explore">Explorar</button>
-            <button class="btn btn-scan">Escanear</button>
+            <div id="dropdownMenu" class="hidden absolute right-0 mt-2 w-64 sm:w-72 bg-neutral-900 border-2 border-fuchsia-500 neon-border-magenta rounded-lg shadow-xl z-20 overflow-hidden">
+                <a href="#" class="flex items-center px-4 py-3 text-sm sm:text-base text-gray-200 hover:bg-neutral-800 dropdown-item-hover transition-colors">
+                    <i class="fas fa-box w-5 h-5 mr-3 text-fuchsia-400"></i> Inventario
+                </a>
+                <a href="#" class="flex items-center px-4 py-3 text-sm sm:text-base text-gray-200 hover:bg-neutral-800 dropdown-item-hover transition-colors">
+                    <i class="fas fa-shopping-cart w-5 h-5 mr-3 text-fuchsia-400"></i> Ventas
+                </a>
+                <a href="#" class="flex items-center px-4 py-3 text-sm sm:text-base text-gray-200 hover:bg-neutral-800 dropdown-item-hover transition-colors">
+                    <i class="fas fa-list-alt w-5 h-5 mr-3 text-fuchsia-400"></i> Historial
+                </a>
+                <a href="#" class="flex items-center px-4 py-3 text-sm sm:text-base text-gray-200 hover:bg-neutral-800 dropdown-item-hover transition-colors">
+                    <i class="fas fa-chart-bar w-5 h-5 mr-3 text-fuchsia-400"></i> Estadísticas
+                </a>
+                <a href="#" class="flex items-center px-4 py-3 text-sm sm:text-base text-gray-200 hover:bg-neutral-800 dropdown-item-hover transition-colors">
+                    <i class="fas fa-cog w-5 h-5 mr-3 text-fuchsia-400"></i> Configuración
+                </a>
+            </div>
+        </div>
+    </header>
+
+    <main class="w-full max-w-2xl flex flex-col items-center text-center mt-6 sm:mt-10">
+        <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold text-green-400 neon-text-green mb-3 sm:mb-4">
+            Bienvenido a <br class="sm:hidden"> MiniMarket
+        </h1>
+        <p class="text-base sm:text-lg text-gray-300 mb-10 sm:mb-12">
+            Tu sistema de gestión rápido y sencillo
+        </p>
+
+        <div class="flex flex-col sm:flex-row gap-4 sm:gap-6 mb-10 sm:mb-12 w-full sm:w-auto">
+            <button class="btn-explore flex items-center justify-center gap-2 sm:gap-3 px-6 py-3 sm:px-8 sm:py-4 text-base sm:text-lg font-bold text-green-400 border-2 border-green-400 neon-border-green rounded-xl hover:bg-green-600 hover:text-black hover:border-green-600 transition-all w-full sm:w-auto">
+                <i class="fas fa-shopping-basket"></i>
+                EXPLORAR PRODUCTOS
+            </button>
+            <button class="btn-scan flex items-center justify-center gap-2 sm:gap-3 px-6 py-3 sm:px-8 sm:py-4 text-base sm:text-lg font-bold text-fuchsia-400 border-2 border-fuchsia-400 neon-border-magenta rounded-xl hover:bg-fuchsia-600 hover:text-black hover:border-fuchsia-600 transition-all w-full sm:w-auto">
+                <i class="fas fa-camera"></i>
+                ESCÁNER
+            </button>
         </div>
 
-        <input type="search" class="search-bar" placeholder="Buscar..." />
-    </div>
+        <div class="w-full max-w-md mb-10 sm:mb-16">
+            <input type="text" placeholder="Buscar productos..." class="w-full px-5 py-3 sm:py-4 bg-neutral-800 border-2 border-green-400 neon-border-green rounded-full text-gray-200 placeholder-gray-500 focus:outline-none focus:border-green-300 focus:ring-1 focus:ring-green-300 transition-all text-sm sm:text-base">
+        </div>
+    </main>
 
-    <footer>
-        &copy; 2025 Mi Proyecto
+    <footer class="w-full text-center text-gray-500 text-xs sm:text-sm py-6 mt-auto">
+        &copy; 2025 MiniMarket | Creado y desarrollado por Jonathan Tuquerrez
     </footer>
 
     <script>
-        function toggleDropdown() {
-            document.getElementById("dropdown-menu").classList.toggle("show");
-        }
+        // JavaScript for Dropdown Menu
+        const menuButton = document.getElementById('menuButton');
+        const dropdownMenu = document.getElementById('dropdownMenu');
+        let isDropdownOpen = false;
 
-        // Cierra el menú si el usuario hace clic fuera de él
-        window.onclick = function(event) {
-            if (!event.target.matches('.dropbtn')) {
-                var dropdowns = document.getElementsByClassName("dropdown-content");
-                for (var i = 0; i < dropdowns.length; i++) {
-                    var openDropdown = dropdowns[i];
-                    if (openDropdown.classList.contains('show')) {
-                        openDropdown.classList.remove('show');
-                    }
-                }
+        // Function to toggle dropdown visibility
+        function toggleDropdown() {
+            isDropdownOpen = !isDropdownOpen;
+            if (isDropdownOpen) {
+                dropdownMenu.classList.remove('hidden');
+                // Optional: Add animation class if you have one
+                // dropdownMenu.classList.add('animate-fadeIn'); 
+            } else {
+                dropdownMenu.classList.add('hidden');
+                // Optional: Add animation class if you have one
+                // dropdownMenu.classList.remove('animate-fadeIn');
             }
         }
+
+        menuButton.addEventListener('click', function(event) {
+            event.stopPropagation(); // Prevents click from bubbling up to document
+            toggleDropdown();
+        });
+
+        // Close dropdown if clicked outside
+        document.addEventListener('click', function(event) {
+            if (isDropdownOpen && !dropdownMenu.contains(event.target) && !menuButton.contains(event.target)) {
+                toggleDropdown();
+            }
+        });
+
+        // Close dropdown with Escape key
+        document.addEventListener('keydown', function(event) {
+            if (event.key === 'Escape' && isDropdownOpen) {
+                toggleDropdown();
+            }
+        });
     </script>
 
 </body>
