--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
   <div class="order-summary-container">
     <!-- Video de fondo -->
     <video id="videoDisplay" muted loop autoplay>
-      <source src="https://drive.google.com/uc?export=download&id=1ZaCvE-ZlNswPLTRXoCgLa64xIek0fsYl" type="video/mp4">
+      <source src="https://raw.githubusercontent.com/jona30-web/Minimarket.app/1ccf8d541daa3acfb4dac1b5b2a46a99df54dc38/video4%20(1).mp4" type="video/mp4">
       Tu navegador no soporta el video.
     </video>
 
