--- a/index.html
+++ b/index.html
@@ -20,18 +20,23 @@
       font-size: 16px;
       padding: 0;
       margin: 0;
+      height: 100vh; /* Asegura que la altura sea de toda la pantalla */
+      display: flex;
+      flex-direction: column;
     }
 
     /* Contenedor de la orden con el video de fondo */
     .order-summary-container {
       position: relative;
-      background: rgba(255, 255, 255, 0.7); /* Fondo blanco ligeramente transparente para no perder contenido */
+      background: rgba(255, 255, 255, 0.7); /* Fondo blanco ligeramente transparente */
       padding: 20px;
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       margin: 20px;
       z-index: 2;
       min-height: 60vh;
+      display: flex;
+      flex-direction: column;
     }
 
     /* Video de fondo */
@@ -42,6 +47,7 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      opacity: 0.5;
       z-index: -1; /* Asegura que el video esté detrás del contenido */
     }
 
@@ -234,9 +240,6 @@
     <!-- Botones de acciones -->
     <button class="action-button" id="view-receipt">Vista previa recibo</button>
     <button class="action-button" id="finalize-sale">Finalizar venta</button>
-
-    <!-- Selección de video -->
-    <input type="file" id="videoInput" accept="video/*" />
   </div>
 
   <script>
@@ -307,19 +310,6 @@
 
     document.getElementById('finalize-sale').addEventListener('click', () => {
       alert("Venta finalizada.");
-    });
-
-    // Seleccionar el video de la galería
-    const videoInput = document.getElementById('videoInput');
-    const videoDisplay = document.getElementById('videoDisplay');
-
-    videoInput.addEventListener('change', function(event) {
-      const file = event.target.files[0]; // Obtener el archivo seleccionado
-
-      if (file) {
-        const videoUrl = URL.createObjectURL(file); // Crear una URL para el video
-        videoDisplay.src = videoUrl; // Establecer el video como fuente
-      }
     });
   </script>
 
