--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     <!-- Video de fondo -->
     <video id="videoDisplay" muted loop autoplay>
       <source src="https://raw.githubusercontent.com/jona30-web/Minimarket.app/1ccf8d541daa3acfb4dac1b5b2a46a99df54dc38/video4%20(1).mp4" type="video/mp4">
-      Tu navegador no soporta el video.
+      Tu navegador no soporta el formato de video.
     </video>
 
     <!-- Contenido del resumen de la orden -->
@@ -240,6 +240,7 @@
     <!-- Botones de acciones -->
     <button class="action-button" id="view-receipt">Vista previa recibo</button>
     <button class="action-button" id="finalize-sale">Finalizar venta</button>
+
   </div>
 
   <script>
