--- a/index.html
+++ b/index.html
@@ -20,15 +20,16 @@
       font-size: 16px;
       padding: 0;
       margin: 0;
-      height: 100vh;
+      height: 100vh; /* Asegura que la altura sea de toda la pantalla */
       display: flex;
       flex-direction: column;
+      overflow: hidden;
     }
 
     /* Contenedor de la orden con el video de fondo */
     .order-summary-container {
       position: relative;
-      background: rgba(255, 255, 255, 0.8);
+      background: rgba(255, 255, 255, 0.7); /* Fondo blanco ligeramente transparente */
       padding: 20px;
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -46,10 +47,9 @@
       left: 0;
       width: 100%;
       height: 100%;
-      object-fit: cover;
-      opacity: 0.4;
+      object-fit: cover;  /* Asegura que el video cubra toda la pantalla */
+      opacity: 0.4;  /* Asegura que el video no opaque el contenido */
       z-index: -1;
-      object-position: center;
     }
 
     /* Estilos del título */
