--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       font-size: 16px;
       padding: 0;
       margin: 0;
-      height: 100vh; /* Asegura que la altura sea de toda la pantalla */
+      height: 100vh;
       display: flex;
       flex-direction: column;
     }
