--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
       min-height: 60vh;
       display: flex;
       flex-direction: column;
+      opacity: 0;
+      animation: fadeIn 1s forwards; /* Animación de aparición */
+    }
+
+    /* Animación de desvanecimiento */
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+      }
+      to {
+        opacity: 1;
+      }
     }
 
     /* Video de fondo */
@@ -49,6 +61,17 @@
       object-fit: cover;
       opacity: 0.5;
       z-index: -1; /* Asegura que el video esté detrás del contenido */
+      animation: fadeInVideo 3s ease-in-out infinite alternate; /* Efecto de pulsado */
+    }
+
+    /* Animación de pulsado para el video */
+    @keyframes fadeInVideo {
+      0% {
+        opacity: 0.5;
+      }
+      100% {
+        opacity: 0.7;
+      }
     }
 
     /* Estilos del título */
@@ -57,11 +80,25 @@
       color: #2196f3;
       font-size: 2rem;
       margin-bottom: 20px;
+      animation: slideUp 1s ease-out; /* Efecto de deslizamiento */
+    }
+
+    /* Animación de deslizamiento del título */
+    @keyframes slideUp {
+      from {
+        transform: translateY(20px);
+        opacity: 0;
+      }
+      to {
+        transform: translateY(0);
+        opacity: 1;
+      }
     }
 
     /* Lista de productos */
     .product-list {
       margin-bottom: 20px;
+      animation: fadeIn 1s ease-out; /* Animación de aparición de los productos */
     }
 
     .product-item {
@@ -70,10 +107,20 @@
       align-items: center;
       border-bottom: 1px solid #ccc;
       padding: 10px 0;
+      transform: translateX(-50px);
+      animation: slideIn 0.6s ease forwards; /* Animación de entrada desde la izquierda */
     }
 
-    .product-item:last-child {
-      border-bottom: none;
+    /* Animación de deslizamiento para los productos */
+    @keyframes slideIn {
+      from {
+        transform: translateX(-50px);
+        opacity: 0;
+      }
+      to {
+        transform: translateX(0);
+        opacity: 1;
+      }
     }
 
     .product-name {
@@ -101,16 +148,23 @@
       border: none;
       border-radius: 4px;
       cursor: pointer;
+      transition: background-color 0.3s ease, transform 0.3s ease;
     }
 
     .product-quantity button:hover {
       background-color: #1976d2;
+      transform: scale(1.1); /* Efecto de aumento en tamaño */
     }
 
     .delete-btn {
       color: red;
       cursor: pointer;
       font-size: 1rem;
+      transition: color 0.3s ease;
+    }
+
+    .delete-btn:hover {
+      color: #d32f2f;
     }
 
     /* Cuadro de subtotal y total */
@@ -125,11 +179,6 @@
       border-radius: 10px;
       background-color: #f1f8e9;
       color: #2196f3;
-    }
-
-    .total-container .subtotal,
-    .total-container .total {
-      font-weight: bold;
     }
 
     .final-total {
@@ -149,12 +198,13 @@
       border: none;
       border-radius: 8px;
       cursor: pointer;
-      transition: background-color 0.3s ease;
+      transition: background-color 0.3s ease, transform 0.3s ease;
       width: 100%;
     }
 
     .action-button:hover {
       background-color: #388e3c;
+      transform: scale(1.05); /* Efecto de aumento en tamaño */
     }
 
     /* Estilos para pantallas pequeñas */
